@@ -62,6 +62,7 @@ void detect_udf(SECTION *section, int level);
 /* in linux.c */
 void detect_ext234(SECTION *section, int level);
 void detect_btrfs(SECTION *section, int level);
+void detect_f2fs(SECTION *section, int level);
 void detect_reiser(SECTION *section, int level);
 void detect_reiser4(SECTION *section, int level);
 void detect_linux_raid(SECTION *section, int level);
@@ -141,6 +142,7 @@ DETECTOR detectors[] = {
   detect_iso,
   detect_ext234,
   detect_btrfs,
+  detect_f2fs,
   detect_reiser,
   detect_reiser4,
   detect_linux_raid,
